projects page had finshed

--- a/css/framework.css
+++ b/css/framework.css
@@ -42,12 +42,14 @@
 .mt-45 {margin-top: 45px;}
 .mr-10 {margin-right: 10px;}
 .mr-15 {margin-right: 15px;}
+.mr-20 {margin-right: 20px;}
 .mb-5 {margin-bottom: 5px;}
 .mb-10 {margin-bottom: 10px;}
 .mb-15 {margin-bottom: 15px;}
 .mb-20 {margin-bottom: 20px;}
 .mb-25 {margin-bottom: 25px;}
 .ml-2 {margin-left: 2px;}
+.ml-15 {margin-left: 15px;}
 /* End Padding & Margin */
 /* Start Color */
 /* Color Theme Swatches in Hex */
