added courses page

--- a/css/framework.css
+++ b/css/framework.css
@@ -118,7 +118,8 @@
     background-color: #D9B589;
     border: none;
     font-size: 14px;
-    color:#121212
+    color:#121212;
+    cursor: pointer;
 }
 .line{
     height: 1px;
