--- a/css/style.css
+++ b/css/style.css
@@ -853,3 +853,45 @@ textarea:focus::placeholder {
 }
 /* End Media */
 /* End Projects Page */
+/* Start Courses Page */
+.courses-page{
+  grid-template-columns:repeat(auto-fill,minmax(300px,1fr));
+  margin-right: 10px;
+  margin-left: 10px;
+  gap:10px;
+}
+.courses-page .course{
+  overflow: hidden;
+}
+.courses-page .course .cover{
+  width: 500px;
+  height: 500px;
+}
+.courses-page .course .instructor{
+  width: 64px;
+  height: 64px;
+  position: absolute;
+  top:20px;
+  right:20px;
+  border-radius: 50%;
+  border:1px solid
+}
+.courses-page .course .info{
+  border-top: 1px solid;
+  padding: 30px;
+}
+.courses-page .course .info .title{
+  position: absolute;
+  left: 50%;
+  transform: translateX(-50%);
+  font-size: 12px;
+  margin-bottom: 5px;
+}
+/* Start Media */
+@media (max-width: 768px) {
+  .courses-page {
+    grid-template-columns: repeat(auto-fill,minmax(200px,1fr));
+  }
+}
+/* End Media */
+/* End Courses Page */
