--- a/css/style.css
+++ b/css/style.css
@@ -688,8 +688,6 @@ textarea:focus::placeholder {
 .profile-page .avater-box {
   width: 300px;
 }
-.profile-page .avater-box > img {
-}
 .profile-page .avater-box .level {
   height: 8px;
   overflow: hidden;
@@ -743,7 +741,9 @@ textarea:focus::placeholder {
 .profile-page .activities {
   flex-grow: 2;
 }
-
+.profile-page .activities .activity i{
+  color: black;
+}
 /* Start Media */
 @media (min-width: 768px) {
   .profile-page .avater-box {
@@ -874,7 +874,7 @@ textarea:focus::placeholder {
   top:20px;
   right:20px;
   border-radius: 50%;
-  border:1px solid
+  border:4px solid
 }
 .courses-page .course .info{
   border-top: 1px solid;
@@ -895,3 +895,50 @@ textarea:focus::placeholder {
 }
 /* End Media */
 /* End Courses Page */
+/* Start Friends Page */
+.friends-page{
+  grid-template-columns:repeat(auto-fill,minmax(300px,1fr));
+  margin-right: 10px;
+  margin-left: 10px;
+  gap:10px;
+}
+.friends-page .contact{
+  position: absolute;
+  left: 10px;
+  top: 10px;
+}
+.friends-page .contact i{
+  background-color: var(--main-color);
+  color: var(--background-color);
+  padding: 10px;
+  border-radius: 50%;
+}
+.friends-page .contact i:hover{
+  background-color: var(--main-color-alt);
+}
+.friends-page .txt-c img{
+  width: 200px;
+  height: 200px;
+}
+.friends-page .contact{}
+.friends-page .icons{
+  border-top: 1px solid;
+  border-bottom: 1px solid;
+  margin-top: 20px;
+  margin-bottom: 40px;
+  padding-top: 20px;
+  padding-bottom: 20px;
+}
+.friends-page .icons i{
+  margin-right: 5px;
+}
+.friends-page .contact{}
+.friends-page .contact{}
+/* Start Media */
+@media (max-width: 768px) {
+  .friends-page {
+    grid-template-columns: repeat(auto-fill,minmax(200px,1fr));
+  }
+}
+/* End Media */
+/* End Friends Page */
