--- a/css/framework.css
+++ b/css/framework.css
@@ -27,6 +27,7 @@
 .p-15 {padding: 15px;}
 .p-20 {padding:20px;}
 .pt-5 {padding-top:5px;}
+.pt-10 {padding-top:10px;}
 .pt-20 {padding-top:20px;}
 .pb-20 {padding-bottom:20px;}
 .pl-15 {padding:15px;}
@@ -79,6 +80,7 @@
 /* End position */
 /* Start Font */
 .txt-c {text-align: center;}
+.fs-10 {font-size: 10px;}
 .fs-14 {font-size: 14px;}
 .fs-13 {font-size: 13px;}
 .fs-15 {font-size: 15px;}
@@ -131,9 +133,12 @@
     margin-top: 40px;
     margin-bottom: 40px;
 }
-  .line.head{
+.line.head{
     margin-top: 20px;
     margin-bottom: 40px;
+}
+.border{
+    border:1px solid #D9B589;
 }
 /* End Components */
 
